<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="air_conditional_cleaner">Air conditioning</string>
    <string name="aqua">Boiler</string>
    <string name="audio">Sound System</string>
    <string name="cleaner">Vacuum cleaner</string>
    <string name="dvd">DVD-player</string>
    <string name="fan">Fan</string>
    <string name="lighting">Lighting</string>
    <string name="meteo">Weather Station</string>
    <string name="photo">Camera</string>
    <string name="projector">Projector</string>
    <string name="satellite">Satellite</string>
    <string name="tv">TV</string>
    <string name="app_name">iRemote</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_select_controll">Select remote</string>
    <string name="search">Search</string>
    <string name="title_activity_create_custom_controll">Creating remote</string>
    <string name="title_activity_widget_settings">Widget settings</string>
    <string name="title_activity_rooms">Rooms</string>
    <string name="rooms">Rooms</string>
    <string name="newRemote">New Remote</string>
    <string name="room_name">Room name</string>
    <string name="enter_name">Enter the name</string>
    <string name="title_activity_custom_remote">Creating custom control</string>

    <string name="action_saveRemote">Save remote</string>
    <string name="other_buttons">Other buttons</string>
    <string name="giy">Teach</string>
    <string name="auto_match">Automatch</string>
    <string name="device_type">Device type</string>
    <string name="company">Company</string>
    <string name="model">Model</string>
    <string name="next">Next</string>
    <string name="match_tutorial">
        1) Connect iRemote
        \n2) Turn it into a control mode
        \n3) Point the device towards a managed object
        \n4) Click on</string>
    <string name="edit">Edit</string>
    <string name="title_search_company">Company</string>
    <string name="title_button_fragment">Creating button</string>
    <string name="title_diy_fragment">Creating button</string>
    <string name="title_start_diy_agment">Creating remote</string>
    <string name="title_automatch_fragment">Testing buttons</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="tutorial_record">\tConnect the device to your phone.
        \n\tPlace the unit in the learning mode by moving the toggle switch aside smartphone.
        \n\tstart recording and click on the recording button original remote</string>
    <string name="add_control">Add remote</string>
    <string name="add">Add</string>
    <string name="title_activity_activity_add_button">Adding button</string>
    <string name="title_edit_button_fragment">Editing button</string>
    <string name="move">Move</string>
    <string name="help">Help</string>
    <string name="room_type">Room type</string>
    <string name="delete_question">Delete Item?</string>
    <string name="yes_delete">Yes,Delete</string>
    <string name="responce">Response</string>
    <string name="not_responce">Not Response</string>
    <string name="create_button_test">
        \tThe data is processed.
        \n\tYou can check the quality of the recording.
        \n\tTo do this, place the device in the control mode, napravte towards the controlled device and click \"Verify\"</string>
    <string name="input_feeld">Fill out the field</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="official">Official</string>
    <string name="users_controls">Custom</string>
    <string name="title_group_fragment">Device type</string>
    <string name="tips">Tips</string>
    <string name="button_name">Button name</string>
    <string name="record">Recording</string>
    <string name="button_type">Button type</string>
    <string name="verify">Verify</string>
    <string name="enter_button_name">Enter the name of the button</string>
    <string name="record_signal">Please record signal</string>
    <string name="yes">Yes</string>
    <string name="question_not_add_any_button">You have not added any buttons, exit without saving?</string>
    <string name="brand">Brand</string>
    <string name="error_query">Не удалось выполнить запрос к серверу. Повторить?</string>
    <string name="downloading">Downloading</string>
    <string name="nothing_founded">Nothing founded</string>
    <string name="not_finded_device">Не удалось подобрать пульт, извините..</string>

</resources>

